정보페이지 더미텍스트추가

--- a/src/main/resources/templates/hanip/information.mustache
+++ b/src/main/resources/templates/hanip/information.mustache
@@ -12,6 +12,19 @@
         </div>
     </div>
     <br>
-
+    <div class="col-md-12">
+        <br><br>
+        파란 별에도 자랑처럼 버리었습니다. 이 우는 별들을 이네들은 어머님, 덮어 계절이 노루, 아무 버리었습니다. 헤일 오는 이 아이들의 있습니다. 이런 하늘에는 릴케 우는 이 같이 봅니다. 무엇인지 이름과 이름자 위에 청춘이 나의 어머니, 거외다. 아스라히 멀리 위에 둘 버리었습니다.
+        <br>
+        하나에 하나에 위에 아이들의 피어나듯이 않은 하나에 봅니다. 위에도 나는 그러나 벌써 거외다. 잠, 별 시와 하나 버리었습니다. 피어나듯이 별에도 청춘이 쉬이 노루, 별이 소학교 듯합니다. 가득 위에 노루, 사람들의 별들을 자랑처럼 까닭입니다.
+        <br><br>
+        벌레는 파란 밤이 까닭입니다. 않은 동경과 어머니 쉬이 오면 별 별 슬퍼하는 봅니다. 한 애기 하나에 봄이 걱정도 듯합니다. 동경과 이웃 나의 밤이 이런 까닭입니다. 아이들의 했던 벌레는 동경과 무엇인지 비둘기, 말 까닭입니다.
+        <br>
+        때 지나고 새워 풀이 같이 겨울이 둘 어머님, 거외다. 봄이 아침이 이국 하나에 가득 것은 쉬이 많은 듯합니다. 위에도 내린 소녀들의 거외다. 이름과, 아직 이 별 무덤 있습니다. 별 덮어 까닭이요, 별 그리워 까닭입니다. 위에도 마디씩 가난한 듯합니다.
+        <br><br>
+        어머니 언덕 사랑과 소학교 둘 버리었습니다. 다 별 부끄러운 걱정도 패, 아름다운 다 별빛이 봅니다. 강아지, 흙으로 우는 멀듯이, 버리었습니다. 별을 사람들의 딴은 이제 둘 묻힌 버리었습니다.
+        <br>
+        멀리 이름과, 불러 겨울이 아무 가득 토끼, 까닭입니다. 못 별들을 별이 별 버리었습니다. 하나의 못 위에도 별 겨울이 무덤 비둘기, 아침이 거외다. 별을 않은 내 부끄러운 토끼, 별 밤을 밤이 내 거외다. 멀리 멀리 마리아 별 별에도 멀듯이, 위에 이네들은 하나에 봅니다.
+    </div>
 
 {{>layout/footer}}
