--- a/src/main/resources/templates/hanip/program.mustache
+++ b/src/main/resources/templates/hanip/program.mustache
@@ -62,4 +62,11 @@
             </tbody>
         </table>
     </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+        {{#program_page_number}}
+            <li class="page-item"><a class="page-link" href="/program?page={{pageNumber}}">{{pageNumber}}</a></li>
+        {{/program_page_number}}
+        </ul>
+    </nav>
 {{>layout/footer}}
