--- a/src/main/resources/templates/hanip/program.mustache
+++ b/src/main/resources/templates/hanip/program.mustache
@@ -27,8 +27,8 @@
             <thead class="thead-strong">
             <tr>
                 <th><a href="/information">한입소개</a></th>
-                <th><a href="/program">프로그램</a></th>
-                <th><a href="/reservation">예약,신청</a></th>
+                <th><a href="/program?page=0">프로그램</a></th>
+                <!--<th><a href="/reservation">예약,신청</a></th>-->
                 <th><a href="/qna">문의</a></th>
             </tr>
             </thead>
