--- a/src/main/resources/templates/hanip/reservation.mustache
+++ b/src/main/resources/templates/hanip/reservation.mustache
@@ -1,26 +1,26 @@
 {{>layout/header}}
     <br>
-<h1><a href="/hanip">&nbsp;&nbsp;&nbsp;&nbsp;한입</a></h1>
+    <h1><a href="/hanip">&nbsp;&nbsp;&nbsp;&nbsp;한입</a></h1>
     <br>
     <div class="col-md-12">
         <!-- 로그인 기능 영역 -->
         <div class="row">
             <div class="col-md-6">
-                <a href="/posts/save" role="button" class="btn
-                   btn-primary">글 등록</a>
+
                 {{#userName}}
                     Logged in as: <span id="user">{{userName}}</span>
-                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                    <a href="/logout" class="btn btn-info active" role="button">Logout</a>
                 {{/userName}}
                 {{^userName}}
-                    <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
-                    <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
+                    <a href="/login" class="btn btn-success active" role="button">Login</a>
                 {{/userName}}
 
             </div>
         </div>
+        <span><a href="/hanip-manager">관리자페이지</a></span>
     </div>
     <br>
+
     <div class="col-md-12">
 
         <!--배너 -->
@@ -28,14 +28,50 @@
             <thead class="thead-strong">
             <tr>
                 <th><a href="/information">한입소개</a></th>
-                <th><a href="/program">프로그램</a></th>
-                <th><a href="/reservation">예약,신청</a></th>
+                <th><a href="/program?page=0">프로그램</a></th>
+                <!--<th><a href="/reservation">예약,신청</a></th>-->
                 <th><a href="/qna">문의</a></th>
             </tr>
             </thead>
 
         </table>
     </div>
+    프로그램번호:
+    <span id="programId">{{programId}}</span>
     <br>
+    <div class="col-md-12">
+        <label>날짜</label>
+        <input type="text" id="datePicker">
+    </div>
+    <br>
+    <div class="form-group">
+        <label for="author">전화번호</label>
+        <input type="text" class="form-control"
+               id="phoneNumber" placeholder="연락받으실 전화번호를 입력하세요">
+    </div>
+    <div class="form-group">
+        <label for="content">여행관련 특이사항</label>
+        <textarea class="form-control" id="uniqueness"
+                  placeholder="특이사항을 입력하세요"></textarea>
+    </div>
+
+    <div>
+        <button type="button" id="click-btn">예약저장</button>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.kr.min.js">
+    </script>
+    <script type="text/javascript">
+        $('#datePicker').datepicker({
+            format : "yyyy-mm-dd", // 달력에서 클릭시 표시할 값 형식
+            language : "kr", // 언어(js 추가가 필요하다.)
+            todayHighlight: true
+        });
+    </script>
+
 
 {{>layout/footer}}
