--- a/src/main/resources/templates/hanip/program-detail.mustache
+++ b/src/main/resources/templates/hanip/program-detail.mustache
@@ -29,6 +29,11 @@
                 </button>
             </a>
         {{/is-manager}}
+        <a href="/reservation/{{program.id}}" role="button" class="btn btn-secondary">
+            <button type="button" class="btn btn-primary" id="progam-btn-reservation-page">
+                예약하기
+            </button>
+        </a>
     </div>
 </div>
 
