--- a/src/main/resources/templates/hanip/hanip.mustache
+++ b/src/main/resources/templates/hanip/hanip.mustache
@@ -1,47 +1,6 @@
 {{>layout/header}}
-    <br>
-    <h1><a href="/hanip">&nbsp;&nbsp;&nbsp;&nbsp;한입</a></h1>
+{{>layout/banner}}
 
-    <br>
-    <div class="col-md-12">
-        <!-- 로그인 기능 영역 -->
-        <div class="row">
-            <div class="col-md-6">
-
-                {{#userName}}
-                    Logged in as:
-                    <span id="user">
-                        {{userName}}
-                    </span>
-                    <a href="/logout" class="btn btn-info active" role="button">Logout</a>
-                    <a href="/user/detail" class="btn btn-info active" role="button">예약, 문의내역 보기</a>
-                {{/userName}}
-                {{^userName}}
-                    <a href="/login" class="btn btn-success active" role="button">Login</a>
-                {{/userName}}
-
-            </div>
-        </div>
-        <span><a href="/hanip-manager">관리자페이지</a></span>
-    </div>
-    <br>
-
-    <div class="col-md-12">
-
-        <!--배너 -->
-        <table class="table table-horizontal table-bordered">
-            <thead class="thead-strong">
-            <tr>
-                <th><a href="/information">한입소개</a></th>
-                <th><a href="/program?page=0">프로그램</a></th>
-                <!--<th><a href="/reservation">예약,신청</a></th>-->
-                <th><a href="/qna">문의</a></th>
-            </tr>
-            </thead>
-
-        </table>
-    </div>
-    <br>
     <div>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <img src="https://i1.daumcdn.net/thumb/R600x0/?fname=https://blog.kakaocdn.net/dn/bZWlr2/btqRrQfrz56/35k9J7UlFKInoICc9yrnx1/img.jpg" alt="">
