--- a/src/main/resources/templates/hanip/user-detail.mustache
+++ b/src/main/resources/templates/hanip/user-detail.mustache
@@ -1,25 +1,6 @@
 {{>layout/header}}
-    <br>
-<h1><a href="/hanip">&nbsp;&nbsp;&nbsp;&nbsp;한입</a></h1>
-    <br>
-    <div class="col-md-12">
-        <!-- 로그인 기능 영역 -->
-        <div class="row">
-            <div class="col-md-6">
-
-                {{#userName}}
-                    Logged in as: <span id="user">{{userName}}</span>
-                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
-                {{/userName}}
-                {{^userName}}
-                    <a href="/login" class="btn btn-success active" role="button">Login</a>
-                {{/userName}}
-
-            </div>
-        </div>
-    </div>
-    <br>
-    <!--예약 출력 영영 -->
+{{>layout/banner}}
+    <!--예약 출력 영역 -->
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
         <tr>
@@ -32,10 +13,12 @@
         <tbody id="tbody">
         {{#reservation}}
             <tr>
-                <td>{{id}}</td>
+                <td><div id="reservation-delete-id-{{id}}">{{id}}</div></td>
                 <td>{{program.title}}</td>
                 <td>{{date}}</td>
-                <td><a href="/user/detail" class="btn btn-info active" role="button">삭제</a></td>
+                <td><button id="{{id}}" onClick="reservation_delete(this.id)">예약삭제</button></td>
+                <!--<td><input type = "button" onclick = "reservation_delete()" value = "예약삭제" /></td>-->
+                <!--<td><button type="button" class="btn btn-danger" id="btn-reservation-delete">삭제</button></td>-->
             </tr>
         {{/reservation}}
         </tbody>
@@ -48,5 +31,21 @@
             문의수정
         </div>
     </div>
+    <script type="text/javascript">
 
+        function reservation_delete(id) {
+
+            $.ajax({
+                type: 'DELETE',
+                url: '/api/v1/reservation/' + id,
+                dataType: 'json',
+                contentType:'application/json; charset=utf-8'
+            }).done(function () {
+                alert('예약내역이 삭제되었습니다.');
+                location.reload();
+            }).fail(function (error) {
+                alert(JSON.stringify(error));
+            });
+        }
+    </script>
 {{>layout/footer}}
