--- a/src/main/resources/templates/hanip/layout/header.mustache
+++ b/src/main/resources/templates/hanip/layout/header.mustache
@@ -8,3 +8,34 @@
 
 </head>
 <body>
+
+<br>
+<h1><a href="/hanip">&nbsp;&nbsp;&nbsp;&nbsp;한입</a></h1>
+
+<br>
+<div class="col-md-12">
+    <!-- 로그인 기능 영역 -->
+    <div class="row">
+        <div class="col-md-6">
+
+            {{#userName}}
+                Logged in as:
+                <span id="user">
+                    {{userName}}
+                </span>
+                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                <a href="/user/detail" class="btn btn-info active" role="button">예약, 문의내역 보기</a>
+            {{/userName}}
+
+            {{^userName}}
+                <a href="/login" class="btn btn-success active" role="button">Login</a>
+            {{/userName}}
+
+        </div>
+    </div>
+    {{#is-manager}}
+        <span><a href="/hanip-manager">관리자메인페이지</a></span>
+    {{/is-manager}}
+
+</div>
+<br>
