--- a/src/main/resources/templates/hanip/information.mustache
+++ b/src/main/resources/templates/hanip/information.mustache
@@ -1,40 +1,5 @@
 {{>layout/header}}
-    <br>
-<h1><a href="/hanip">&nbsp;&nbsp;&nbsp;&nbsp;한입</a></h1>
-    <br>
-    <div class="col-md-12">
-        <!-- 로그인 기능 영역 -->
-        <div class="row">
-            <div class="col-md-6">
-
-                {{#userName}}
-                    Logged in as: <span id="user">{{userName}}</span>
-                    <a href="/logout" class="btn btn-info active" role="button">Logout</a>
-                {{/userName}}
-                {{^userName}}
-                    <a href="/login" class="btn btn-success active" role="button">Login</a>
-                {{/userName}}
-
-            </div>
-        </div>
-        <span><a href="/hanip-manager">관리자페이지</a></span>
-    </div>
-    <br>
-    <div class="col-md-12">
-
-        <!--배너 -->
-        <table class="table table-horizontal table-bordered">
-            <thead class="thead-strong">
-            <tr>
-                <th><a href="/information">한입소개</a></th>
-                <th><a href="/program?page=0">프로그램</a></th>
-                <!--<th><a href="/reservation">예약,신청</a></th>-->
-                <th><a href="/qna">문의</a></th>
-            </tr>
-            </thead>
-
-        </table>
-    </div>
+{{>layout/banner}}
     <div class="col-md-12">
         <br><br>
         파란 별에도 자랑처럼 버리었습니다. 이 우는 별들을 이네들은 어머님, 덮어 계절이 노루, 아무 버리었습니다. 헤일 오는 이 아이들의 있습니다. 이런 하늘에는 릴케 우는 이 같이 봅니다. 무엇인지 이름과 이름자 위에 청춘이 나의 어머니, 거외다. 아스라히 멀리 위에 둘 버리었습니다.
