--- a/src/main/resources/templates/hanip/program.mustache
+++ b/src/main/resources/templates/hanip/program.mustache
@@ -1,41 +1,5 @@
 {{>layout/header}}
-    <br>
-    <h1><a href="/hanip">&nbsp;&nbsp;&nbsp;&nbsp;한입</a></h1>
-    <br>
-    <div class="col-md-12">
-        <!-- 로그인 기능 영역 -->
-        <div class="row">
-            <div class="col-md-6">
-
-                {{#userName}}
-                    Logged in as: <span id="user">{{userName}}</span>
-                    <a href="/logout" class="btn btn-info active" role="button">Logout</a>
-                {{/userName}}
-                {{^userName}}
-                    <a href="/login" class="btn btn-success active" role="button">Login</a>
-                {{/userName}}
-
-            </div>
-        </div>
-    </div>
-    <br>
-
-    <div class="col-md-12">
-
-        <!--배너 -->
-        <table class="table table-horizontal table-bordered">
-            <thead class="thead-strong">
-            <tr>
-                <th><a href="/information">한입소개</a></th>
-                <th><a href="/program?page=0">프로그램</a></th>
-                <!--<th><a href="/reservation">예약,신청</a></th>-->
-                <th><a href="/qna">문의</a></th>
-            </tr>
-            </thead>
-
-        </table>
-    </div>
-    <br>&nbsp;
+{{>layout/banner}}
     <div>&nbsp;&nbsp;&nbsp;프로그램목록</div>
     <br><br>
     <div class="col-md-12">
