--- a/src/main/resources/templates/hanip/hanip-manager.mustache
+++ b/src/main/resources/templates/hanip/hanip-manager.mustache
@@ -28,13 +28,13 @@
                            btn-primary">3. 예약,신청 관리</a>
             </div>
         </div>
-    </div>
+    </div>Ï
     <br>
     <div class="col-md-12">
         <!-- 로그인 기능 영역 -->
         <div class="row">
             <div class="col-md-6">
-                <a href="/posts/save" role="button" class="btn
+                <a href="/manager/qna" role="button" class="btn
                            btn-primary">4. 문의 답변 관리</a>
             </div>
         </div>
