--- a/src/main/resources/templates/hanip/qna.mustache
+++ b/src/main/resources/templates/hanip/qna.mustache
@@ -18,7 +18,7 @@
         {{#qna}}
             <tr>
                 <td>{{id}}</td>
-                <td><a href="/program/detail/{{id}}">{{title}}</a></td>
+                <td><a href="/qna/detail/{{id}}">{{title}}</a></td>
                 <td>{{author}}</td>
                 <td>{{modifiedDate}}</td>
             </tr>
