예약내역 버튼 수정

--- a/src/main/resources/templates/hanip/layout/header.mustache
+++ b/src/main/resources/templates/hanip/layout/header.mustache
@@ -24,7 +24,7 @@
                     {{userName}}
                 </span>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
-                <a href="/user/detail" class="btn btn-info active" role="button">예약, 문의내역 보기</a>
+                <a href="/user/detail" class="btn btn-info active" role="button">예약문의내역</a>
             {{/userName}}
 
             {{^userName}}
