관리자화면 링크 수정

--- a/src/main/resources/templates/hanip/layout/header.mustache
+++ b/src/main/resources/templates/hanip/layout/header.mustache
@@ -34,7 +34,7 @@
         </div>
     </div>
     {{#is-manager}}
-        <span><a href="/hanip-manager">관리자메인페이지</a></span>
+        <span><a href="/hanip-manager">관리자</a></span>
     {{/is-manager}}
 
 </div>
