qna 답변페이지 추가

--- a/src/main/resources/templates/hanip/qna-detail.mustache
+++ b/src/main/resources/templates/hanip/qna-detail.mustache
@@ -31,7 +31,7 @@
                 </button>
             </a>
         {{/is-manager}}
-        <a href="/qna-answer/{{qna.id}}" role="button" class="btn btn-secondary">
+        <a href="/qna/answer/{{qna.id}}" role="button" class="btn btn-secondary">
             <button type="button" class="btn btn-primary" id="qna-answer-btn">
                 답변하기
             </button>
