--- a/src/main/resources/templates/hanip/layout/banner.mustache
+++ b/src/main/resources/templates/hanip/layout/banner.mustache
@@ -6,8 +6,7 @@
         <thead class="thead-strong">
         <tr>
             <th><a href="/information">한입소개</a></th>
-            <th><a href="/program?page=0">프로그램</a></th>
-            <!--<th><a href="/reservation">예약,신청</a></th>-->
+            <th><a href="/program?page=0">상품</a></th>
             <th><a href="/qna">문의</a></th>
         </tr>
         </thead>
