배너명 수정

--- a/src/main/resources/templates/hanip/layout/banner.mustache
+++ b/src/main/resources/templates/hanip/layout/banner.mustache
@@ -5,7 +5,7 @@
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
         <tr>
-            <th><a href="/information">한입소개</a></th>
+            <th><a href="/information">소개</a></th>
             <th><a href="/program?page=0">상품</a></th>
             <th><a href="/qna">문의</a></th>
         </tr>
