--- a/src/main/resources/templates/hanip/layout/banner.mustache
+++ b/src/main/resources/templates/hanip/layout/banner.mustache
@@ -7,6 +7,7 @@
         <tr>
             <th><a href="/information">소개</a></th>
             <th><a href="/program?page=0">상품</a></th>
+            <th><a href="/reservation">예약</a></th>
             <th><a href="/qna">문의</a></th>
         </tr>
         </thead>
