--- a/src/main/resources/templates/hanip/layout/banner.mustache
+++ b/src/main/resources/templates/hanip/layout/banner.mustache
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <div class="col-md-12">
 
+
     <!--배너 -->
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
         <tr>
             <th><a href="/information">소개</a></th>
             <th><a href="/program?page=0">상품</a></th>
-            <th><a href="/appointment">예약</a></th>
+<!--            <th><a href="/appointment">예약</a></th>-->
             <th><a href="/qna">문의</a></th>
         </tr>
         </thead>
